<resources>
    <string name="app_name">PetoCare</string>
    <string name="home_label">Home</string>
    <string name="veterinary_label">Veterinary</string>
    <string name="offers_label">Offers</string>
    <string name="autoship_label">Autoship</string>
    <string name="profile_label">Profile</string>
    <string name="sara_s_dog_food_chicken_a_milk_3kg_pack"><![CDATA[Sara\'s Dog Food, Chicken & Milk, 3kg Pack]]></string>
    <string name="round_bullet">\u25CF</string>
    <string name="review_desc_string">Thought of giving it a try with a smaller pack for my pug. She \nactually likes it and cleans up her bowl within few minutes. \n Almost half pack over and she eats everyday with same interest.</string>
    <string name="review_title_string">Nice quality and good for picky eaters!!</string>
    <string name="product_title"><![CDATA[Pillow Cat &amp Dog Bed, Brown, Large]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>