<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_label" />

    <item
        android:id="@+id/action_veterinary"
        android:icon="@drawable/ic_veterinary"
        android:title="@string/veterinary_label" />

    <item
        android:id="@+id/action_offers"
        android:icon="@drawable/ic_offers"
        android:title="@string/offers_label" />

    <item
        android:id="@+id/action_autoship"
        android:icon="@drawable/ic_offers"
        android:title="@string/autoship_label" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_label" />
</menu>